@@ -1,17 +1,3 @@
 #pragma once
 
-#ifndef STRICT
-#define STRICT
-#endif
-
-#include <UtilFunc/PluginInc.h>
-
-#define _ATL_APARTMENT_THREADED
-#define _ATL_NO_AUTOMATIC_NAMESPACE
-#define _ATL_CSTRING_EXPLICIT_CONSTRUCTORS
-
-#include <atlbase.h>
-#include <atlcom.h>
-
-using namespace ATL;
-
+#include <complugin_inc.h>
